mi primer commin

--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,2 +1,8 @@
 gestion.property=msclientrestm entorno Desarrollo
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
+spring.datasource.dbcp2.username=postgres
+spring.datasource.password=Uisrael
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
