--- a/msgestionrest-prod.properties
+++ b/msgestionrest-prod.properties
@@ -1,6 +1,9 @@
 gestion.property=msclientrestm entorno Produccion
 
 
-logging.level.org.hibernate.sql=debug
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
+spring.datasource.dbcp2.username=postgres
+spring.datasource.password=Uisrael
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
