--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,4 +1,4 @@
-gestion.property=msclientrestm entorno Desarrollo
+gestion.property=msclientrestm entorno Desarrollo Update
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
 spring.datasource.dbcp2.username=postgres
