--- a/msclientrest-prod.properties
+++ b/msclientrest-prod.properties
@@ -1,1 +1,4 @@
 cliente.property=msclientrestm entorno Produccion
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/clientesDB
+
+app.testPropiedad=Propiedad para test
