--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,6 +1,6 @@
 gestion.property=msclientrestm entorno Desarrollo Update
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
+spring.datasource.url=jdbc:postgresql://localhost:5432/clientesDB
 spring.datasource.dbcp2.username=postgres
 spring.datasource.password=Uisrael
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
