--- a/msgestionrest-prod.properties
+++ b/msgestionrest-prod.properties
@@ -1,7 +1,7 @@
 gestion.property=msclientrestm entorno Produccion
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/clientesDB
-spring.datasource.dbcp2.username=postgres
+spring.datasource.username=postgres
 spring.datasource.password=Uisrael
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
