prueba ruta de mongodb en archivo git dev

--- a/msclientrest-prod.properties
+++ b/msclientrest-prod.properties
@@ -1,4 +1,4 @@
-cliente.property=msclientrestm entorno Produccion
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/clientesDB
+cliente.property=msclientrest entorno Produccion
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/clienteBD
 
 app.testPropiedad=Propiedad para test
