--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,6 +1,6 @@
-gestion.property=msclientrestm entorno Desarrollo Update
+gestion.property=msgestionrest entorno Desarrollo
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/clientesDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
 spring.datasource.dbcp2.username=postgres
 spring.datasource.password=Uisrael
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
