--- a/msgestionrest-prod.properties
+++ b/msgestionrest-prod.properties
@@ -1,7 +1,7 @@
-gestion.property=msclientrestm entorno Produccion
+gestion.property=msgestionrest entorno Produccion
 
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/clientesDB
+spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
 spring.datasource.username=postgres
 spring.datasource.password=Uisrael
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
