--- a/msclientrest-dev.properties
+++ b/msclientrest-dev.properties
@@ -1,1 +1,3 @@
-cliente.property=msclientrestm entorno Desarrollo
+cliente.property=msclientrest entorno Desarrollo
+
+spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
