prueba msGestion ruta BD en arqchivo dev

--- a/msclientrest-dev.properties
+++ b/msclientrest-dev.properties
@@ -1,3 +1,4 @@
 cliente.property=msclientrest entorno Desarrollo
 
-spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
+#prueba para reconocimiento de archivos centralizados si el microservicio sube esta leyendo del repositorio
+#spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
