--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,8 +1,7 @@
 gestion.property=msgestionrest entorno Desarrollo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
-spring.datasource.dbcp2.username=postgres
-spring.datasource.password=Uisrael
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.sql=debug
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
