--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -2,6 +2,8 @@ gestion.property=msgestionrest entorno Desarrollo
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
 
-logging.level.org.hibernate.sql=debug
+spring.datasource.dbcp2.username=postgres
+spring.datasource.password=Uisrael
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
