--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,1 +1,14 @@
 gestion.property=msgestionrest entorno Desarrollo
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
+spring.datasource.username=postgres
+spring.datasource.password=Uisrael
+spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.hibernate.sql=debug
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
