--- a/msgestionrest-prod.properties
+++ b/msgestionrest-prod.properties
@@ -1,2 +1,3 @@
 gestion.property=msgestionrest entorno Produccion
 spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
+spring.datasource.driver-class-name=org.postgresql.Driver
