--- a/msclientrest-prod.properties
+++ b/msclientrest-prod.properties
@@ -1,4 +1,3 @@
 cliente.property=msclientrest entorno Produccion
-spring.data.mongodb.uri=mongodb://127.0.0.1:27017/clienteBD
+spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
 
-app.testPropiedad=Propiedad para test
