--- a/msclientrest-prod.properties
+++ b/msclientrest-prod.properties
@@ -1,5 +1,5 @@
 cliente.property=msclientrest entorno Produccion
 spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
 
-app.testPropiedad = Variable Modificada
+app.testPropiedad = Variable Reemplazada
 
