--- a/msclientrest-dev.properties
+++ b/msclientrest-dev.properties
@@ -1,4 +1,4 @@
 cliente.property=msclientrest entorno Desarrollo
 
 #prueba para reconocimiento de archivos centralizados si el microservicio sube esta leyendo del repositorio
-spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
+spring.data.mongodb.uri=mongodb://localhost:27017/asisLab
