--- a/msclientrest-prod.properties
+++ b/msclientrest-prod.properties
@@ -1,5 +1,5 @@
 cliente.property=msclientrest entorno Produccion
-spring.data.mongodb.uri=mongodb://localhost:27017/clienteBD
+spring.data.mongodb.uri=mongodb://localhost:27017/asisLab
 
 app.testPropiedad = Variable Creada
 
