--- a/msgestionrest-dev.properties
+++ b/msgestionrest-dev.properties
@@ -1,4 +1,4 @@
 gestion.property=msgestionrest entorno Desarrollo
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
+spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
 spring.datasource.driver-class-name=org.postgresql.Driver
