--- a/msgestionrest-prod.properties
+++ b/msgestionrest-prod.properties
@@ -1,3 +1,3 @@
 gestion.property=msgestionrest entorno Produccion
-spring.datasource.url=jdbc:postgresql://localhost:5432/clienteBD
+spring.datasource.url=jdbc:postgresql://localhost:5432/asisLab
 spring.datasource.driver-class-name=org.postgresql.Driver
